meta dato de icon y author

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras">
     <meta name="description"
         content="Elaisa es una marca distinta a las demas ya que te ofrece calidad y confort a la vez a un precio accesible">
+    <meta name="author" content="Bautista Tosi" />
+    <link rel="icon" type="image/png" href="./img/favicon-32x32.png" sizes="32x32" />
     <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
