--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Elaisa, tienda de ropa, ropa, prendas, remeras, contacto, inicia sesion, sesion">
     <meta name="description"
         content="Crea tu perfil para que puedas acceder a las ofertas y recibir todas la novedades">
+    <meta name="author" content="Bautista Tosi" />
+    <link rel="icon" type="image/png" href="./../img/favicon-32x32.png" sizes="32x32" />
     <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -142,8 +144,8 @@
                         alt="logo de facebook"></a>
                 <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
                         alt="logo de instagram"></a>
-                        <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
-                            alt="logo de twitter"></a>
+                <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
+                        alt="logo de twitter"></a>
             </div>
             <p>Todos los derechos reservados</p>
             <p>Diseñado por Bautista Tosi</p>
