--- a/pages/nos.html
+++ b/pages/nos.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras, nosotros, info, creacion">
     <meta name="description"
         content="Elaisa es una marca de ropa creada en 1980 por Ricardo Rodriguez en su afan de crear y diseñar">
+    <meta name="author" content="Bautista Tosi" />
+    <link rel="icon" type="image/png" href="./../img/favicon-32x32.png" sizes="32x32" />
     <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -90,9 +92,12 @@
             <main class="contenedornos">
                 <div class="contenedornos__div">
                     <h1 class="contenedornos__div__h1">¿Quienes somos?</h1>
-                    <p class="contenedornos__div__p1">Elaisa es una marca de ropa creada en 1980 por Ricardo Rodriguez
-                        en su afan de crear y diseñar prendas de vestir con diseños fabulosos para la comunidad. Y poco
-                        a poco, se fue ganando renombre entre las marcas locales hasta llegar a un nivel mundial.
+                    <p class="contenedornos__div__p1">Elaisa es una marca de ropa creada en
+                        1980 por Ricardo Rodriguez
+                        en su afan de crear y diseñar prendas de vestir con diseños
+                        fabulosos para la comunidad. Y poco
+                        a poco, se fue ganando renombre entre las marcas locales hasta
+                        llegar a un nivel mundial.
                     </p>
                 </div>
                 <p class="contenedornos__p2">Elaisa es una marca de ropa creada en 1980 por
@@ -106,8 +111,8 @@
                             alt="logo de facebook"></a>
                     <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
                             alt="logo de instagram"></a>
-                            <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
-                                alt="logo de twitter"></a>
+                    <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
+                            alt="logo de twitter"></a>
                 </div>
                 <p>Todos los derechos reservados</p>
                 <p>Diseñado por Bautista Tosi</p>
