--- a/pages/pro.html
+++ b/pages/pro.html
@@ -9,6 +9,8 @@
         content="Elaisa, Inicio, tienda de ropa, ropa, prendas, remeras, Remera Simple, Remera con estampado pequeño, Remera con estampado grande, remera, talles, precios">
     <meta name="description"
         content="Nuestra variedad de productos va cambiando de temporada a temporada asi que apurate para aprovecharlo">
+    <meta name="author" content="Bautista Tosi" />
+    <link rel="icon" type="image/png" href="./../img/favicon-32x32.png" sizes="32x32" />
     <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
@@ -18,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+
     <title>Productos Elaisa</title>
 </head>
 
@@ -169,8 +172,8 @@
                         alt="logo de facebook"></a>
                 <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
                         alt="logo de instagram"></a>
-                        <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
-                            alt="logo de twitter"></a>
+                <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
+                        alt="logo de twitter"></a>
             </div>
             <p>Todos los derechos reservados</p>
             <p>Diseñado por Bautista Tosi</p>
