--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
                     <a class="navbar-brand" href="index.html"><img src="img/ELaisa-Logo.png"
                             alt="Logo de la Marca Elaisa" class="logo"></a>
                     <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
-                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="img/nav__icon.png"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="./img/nav__icon.png"
                             alt="icono nav"></button>
                     </button>
                     <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                         id="navbarSupportedContent">
                         <ul class="navbar-nav desk">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/nav__clothes.png"
+                                <a class="nav-link" id="a" href="./pages/productos/prod.html"><img src="./img/nav__clothes.png"
                                         alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/nav__rocket.png"
+                                <a class="nav-link" id="a" href="./pages/proy.html"><img src="./img/nav__rocket.png"
                                         alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/nav__about-us-22.png"
+                                <a class="nav-link" id="a" href="./pages/nos.html"><img src="./img/nav__about-us-22.png"
                                         alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/nav__people.png"
+                                <a class="nav-link" id="a" href="./pages/contact.html"><img src="./img/nav__people.png"
                                         alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
@@ -68,19 +68,19 @@
                     <div class="offcanvas-body buscbot">
                         <ul class="navbar-nav buscbot__phone">
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/pro.html"><img src="img/nav__clothes.png"
+                                <a class="nav-link" id="a" href="./pages/productos/prod.html"><img src="./img/nav__clothes.png"
                                         alt="icono de ropa"> Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/proy.html"><img src="img/nav__rocket.png"
+                                <a class="nav-link" id="a" href="./pages/proy.html"><img src="./img/nav__rocket.png"
                                         alt="icono de proyectos">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/nos.html"><img src="img/nav__about-us-22.png"
+                                <a class="nav-link" id="a" href="./pages/nos.html"><img src="./img/nav__about-us-22.png"
                                         alt="icono de nosotros">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="a" href="pages/contact.html"><img src="img/nav__people.png"
+                                <a class="nav-link" id="a" href="./pages/contact.html"><img src="./img/nav__people.png"
                                         alt="icono de contacto">Contacto</a>
                             </li>
                         </ul>
@@ -118,7 +118,7 @@
                         <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
                 </div>
-                <div class="mainindex__sec3__boton"><button><a href="pages/pro.html">MÁS PRODUCTOS</a></button></div>
+                <div class="mainindex__sec3__boton"><button><a href="./pages/productos/prod.html">MÁS PRODUCTOS</a></button></div>
                 <hr>
             </section>
             <!-- desktop -->
