--- a/pages/nos.html
+++ b/pages/nos.html
@@ -30,29 +30,29 @@
             <header>
                 <nav class="navbar navbar-expand-sm nav1">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="../index.html"><img src="../img/ELaisa-Logo.png"
+                        <a class="navbar-brand" href="./../index.html"><img src="../img/ELaisa-Logo.png"
                                 alt="Logo de la Marca Elaisa"></a>
                         <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
-                            data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img
-                                src="../img/nav__icon.png" alt="icono nav"></button>
+                            data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="../img/nav__icon.png"
+                                alt="icono nav"></button>
                         </button>
                         <div class="collapse navbar-collapse d-md-flex justify-content-md-center"
                             id="navbarSupportedContent">
                             <ul class="navbar-nav desk">
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
+                                    <a class="nav-link" id="a" href="./productos/prod.html"><img src="../img/nav__clothes.png"
                                             alt="icono de ropa"> Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
+                                    <a class="nav-link" id="a" href="./proy.html"><img src="../img/nav__rocket.png"
                                             alt="icono de proyectos">Proyectos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
+                                    <a class="nav-link" id="a" href="./nos.html"><img src="../img/nav__about-us-22.png"
                                             alt="icono de nosotros">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
+                                    <a class="nav-link" id="a" href="./contact.html"><img src="../img/nav__people.png"
                                             alt="icono de contacto">Contacto</a>
                                 </li>
                             </ul>
@@ -69,19 +69,19 @@
                         <div class="offcanvas-body buscbot">
                             <ul class="navbar-nav buscbot__phone">
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="pro.html"><img src="../img/nav__clothes.png"
-                                            alt="icono de ropa"> Productos</a>
+                                    <a class="nav-link" id="a" href="./productos/prod.html"><img src="../img/nav__clothes.png"
+                                            alt="icono de ropa">Productos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="proy.html"><img src="../img/nav__rocket.png"
+                                    <a class="nav-link" id="a" href="./proy.html"><img src="../img/nav__rocket.png"
                                             alt="icono de proyectos">Proyectos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="nos.html"><img src="../img/nav__about-us-22.png"
+                                    <a class="nav-link" id="a" href="./nos.html"><img src="../img/nav__about-us-22.png"
                                             alt="icono de nosotros">Nosotros</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" id="a" href="contact.html"><img src="../img/nav__people.png"
+                                    <a class="nav-link" id="a" href="./contact.html"><img src="../img/nav__people.png"
                                             alt="icono de contacto">Contacto</a>
                                 </li>
                             </ul>
