--- a/pages/productos/carrito.html
+++ b/pages/productos/carrito.html
@@ -8,42 +8,45 @@
     <!-- BT -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <!-- css -->
-    <link rel="stylesheet" href="./../../css/style.css">
     <!-- toastify -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- estilo de letra -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- css -->
     <link rel="stylesheet" href="./../../css/style.css">
     <title>Carrito</title>
 </head>
 
 <body>
-    <main id="mainCarrito">
-        <h1 id="h1">Carrito</h1>
-        <!-- contenedor de lo agregado en el carrito -->
-        <div id="mainCarrito__contenedorCarrito"></div>
-        <div id="mainCarrito__utilidades">
-            <!-- texto del total a comprar -->
-            <p id="total"></p>
-            <button id="finalizar" type="button" class="btn btn-primary">Finalizar compra</button>
-            <a href="./prod.html"><button type="button" class="btn btn-primary">Volver</button></a>
-        </div>
-    </main>
-    <footer class="footer">
-        <p class="footer__subt">Nuestras redes</p>
-        <div>
-            <a href="https://es-la.facebook.com" Target="_blank"><img src="../../img/logo-face.png"
-                    alt="logo de facebook"></a>
-            <a href="https://www.instagram.com" Target="_blank"><img src="../../img/logo-insta.png"
-                    alt="logo de instagram"></a>
-            <a href="https://www.twitter.com" Target="_blank"><img src="../../img/logo-twitter.png"
-                    alt="logo de twitter"></a>
-        </div>
-        <p>Todos los derechos reservados</p>
-        <p>Diseñado por Bautista Tosi</p>
-    </footer>
+    <div class="body">
+        <header class="head">
+            <h1 id="h1">Carrito</h1>
+        </header>
+        <main id="mainCarrito">
+            <!-- contenedor de lo agregado en el carrito -->
+            <div id="mainCarrito__contenedorCarrito"></div>
+            <div id="mainCarrito__utilidades">
+                <!-- texto del total a comprar -->
+                <p id="total"></p>
+                <button id="finalizar" type="button" class="btn btn-primary">Finalizar compra</button>
+                <a href="./prod.html"><button type="button" class="btn btn-primary">Volver</button></a>
+            </div>
+        </main>
+        <footer class="footer">
+            <p class="footer__subt">Nuestras redes</p>
+            <div>
+                <a href="https://es-la.facebook.com" Target="_blank"><img src="../../img/logo-face.png"
+                        alt="logo de facebook"></a>
+                <a href="https://www.instagram.com" Target="_blank"><img src="../../img/logo-insta.png"
+                        alt="logo de instagram"></a>
+                <a href="https://www.twitter.com" Target="_blank"><img src="../../img/logo-twitter.png"
+                        alt="logo de twitter"></a>
+            </div>
+            <p>Todos los derechos reservados</p>
+            <p>Diseñado por Bautista Tosi</p>
+        </footer>
+    </div>
     <!-- sweet alert -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- BT -->
