--- a/pages/productos/carrito.html
+++ b/pages/productos/carrito.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div class="body">
+    <div class="bodyCarrito">
         <header class="head">
             <h1 id="h1">Carrito</h1>
         </header>
